--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,9 @@
 # build phase 
 FROM node:alpine as builder
-WORKDIR /app
+WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
-COPY ./ ./
+COPY . .
 RUN npm run build
 
 # prod image
